--- a/index.html
+++ b/index.html
@@ -5,14 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
   <body>
-    <div id="container"></div>
+    <div id="container">
+      <div id="content">
+        <div id="countdown-container">
+          <h1>Ready to launch in...</h1>
+          <div id="countdown">
+            <div class="time">
+              <span>Dias</span>
+              <div id="days"><span class="number">08</span></div>
+            </div>
+            <span class="divider">:</span>
+            <div class="time">
+              <span>Horas</span>
+              <div id="horas"><span class="number">08</span></div>
+            </div>
+            <span class="divider">:</span>
+            <div class="time">
+              <span>Minutos</span>
+              <div id="minutos"><span class="number">08</span></div>
+            </div>
+            <span class="divider">:</span>
+            <div class="time">
+              <span>Segundos</span>
+              <div id="segundos">
+                <span class="number">08</span>
+              </div>
+            </div>
+          </div>
+          <span id="describe"
+            >Inscreva-se para saber mais sobre o lançamento</span
+          >
+          <button type="button">Inscreva-se</button>
+        </div>
+        <div id="image-container">
+          <img src="./images/rocket.svg" alt="" />
+        </div>
+      </div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
